--- a/mods/poker/web/css/poker-pot.css
+++ b/mods/poker/web/css/poker-pot.css
@@ -2,33 +2,42 @@
   cursor: pointer;
   position: absolute;
   display: block;
-  width: 19rem;
-  height: 18rem;
-  background: #dd5500;
+  width: 25rem;
+  height: 7rem;
   overflow: hidden;
   color: #fff;
-  text-shadow: 2px 2px 6px black;
-  top: calc(50% - 100px);
-  left: 0px;
-  margin-left: -8rem;
+  top: calc(50% - 180px);
   z-index: 89;
-  border-radius: 0 8rem 8rem 0;
+  border-radius: 20rem;
   user-select: none;
+  left: 50%;
+  transform: translateX(-50%);
+  background: url(/poker/img/simple-chip.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  border: 1px solid #aaa8;
+  background-color: #2224;
+  padding: 1rem 1rem 1rem 8rem;
+  filter: drop-shadow(5px 5px 3px black);
 }
 
-.pot:hover {
-  background: #ee6600;
+.pot::after {
+  content: "POT";
+  position: absolute;
+  top: 3.5rem;
+  left: 3.5rem;
+  font-size: 2rem;
+  font-weight: bolder;
+  transform: translate(-50%, -50%);
 }
 
 .potholder {
   font-size: 2.4rem;
-  margin-left: 7.5rem;
   padding: 1rem;
   height: 100%;
-  width: 11rem;
   overflow: visible;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
   gap: 0.5rem;
