--- a/mods/poker/web/css/poker-playerbox.css
+++ b/mods/poker/web/css/poker-playerbox.css
@@ -129,8 +129,8 @@
     background-repeat: no-repeat;
     padding: 2px 2rem 0;
     border: 1px solid #aaa8;
-    background-color: #2224;
-    filter: drop-shadow(5px 5px 3px black);
+    background-color: #0006;
+    box-shadow: 5px 5px 3px #0008;
 }
 
 .game-playerbox-seat-1 .poker-player-stake{
