--- a/mods/paths/web/css/paths-board.css
+++ b/mods/paths/web/css/paths-board.css
@@ -1,6 +1,8 @@
 
 .turn-track {
-
+  position: absolute;
+  height: 100px;
+  width: 100px;
 }
 .turn-track-1 {
   top: 213px;
@@ -81,6 +83,10 @@
 .turn-track-20 {
   top: 768px;
   left: 616px;
+}
+.turn-track.active {
+  background-image: url('/paths/img/turn.png');
+  background-size: cover;
 }
 
 
