--- a/mods/poker/web/css/poker-playerbox.css
+++ b/mods/poker/web/css/poker-playerbox.css
@@ -25,7 +25,6 @@
 }
 
 .game-playerbox.game-playerbox-seat-1 {
-	height: 190px;
 	max-width: unset;
 	bottom: unset;
 }
@@ -61,7 +60,7 @@
 	/*width: 100%;*/
 	max-width: min(280px, 50vw);
 	border: 1px solid #fff3;
-	min-height: 12rem;
+	min-height: 7.5rem;
 	color: white;
 	background-color: #0008;
 	position: relative;
@@ -87,6 +86,17 @@
   	transform: translate(-3px, -2px);
 }
 
+.status ul {
+	position: absolute;
+	top: calc(100% + 3rem);
+	width: 100%;
+	overflow: visible;
+}
+
+.game-playerbox-body {
+	width: 100%;
+	overflow: visible;
+}
 
 .game-playerbox-head .saito-user > .saito-address {
 	color: white;
@@ -95,6 +105,8 @@
 .game-playerbox-head .saito-user > .saito-userline {
 	text-transform: lowercase;
 	align-items: flex-end;
+	justify-content: start;
+	gap: 3px;
 }
 
 .saito-user > .saito-identicon-box {
