some initial tweaks

--- a/mods/poker/web/css/poker-playerbox.css
+++ b/mods/poker/web/css/poker-playerbox.css
@@ -67,12 +67,10 @@
 	border-radius: 1.5rem;
 	transition: all 0.5s;
 	margin: auto; /* auto-center in grid */
-	padding: 1.2rem;
+	padding: 1.5rem;
 	gap: 0.5rem;
 	border-radius: 0.5rem;
-    padding: 2rem;
     max-width: 350px;
-    transform: scale(1.1);
 	box-shadow: 5px 5px 3px #0a1808dd;
 }
 
@@ -80,18 +78,11 @@
 	filter: grayscale(100%) brightness(0.6) opacity(75%);
 }
 
-.game-playerbox.active:not(.game-playerbox-seat-1) {
+.game-playerbox.active {
 	border: 1px solid #fff;
-	filter: drop-shadow(5px 5px 3px black);
-  	transform: translate(-3px, -2px);
+  transform: scale(1.05);
 }
 
-.status ul {
-	position: absolute;
-	top: calc(100% + 3rem);
-	width: 100%;
-	overflow: visible;
-}
 
 .game-playerbox-body {
 	width: 100%;
