--- a/mods/poker/web/css/poker-hud.css
+++ b/mods/poker/web/css/poker-hud.css
@@ -1,113 +1,137 @@
-.status ul li.option {
-    /*height: 10rem;*/
-    max-width: 9rem;
-    font-size: 1.8rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    list-style: none;
-    cursor: pointer;
-    flex-direction: column;
-    gap: 0.1rem;
-    list-style: none;
-    border-radius: 1rem;
+.controls div.option {
+  /*height: 10rem;*/
+  height: unset;
+  padding: unset;
+  border: unset;
+  max-width: 9rem;
+  font-size: 1.8rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  list-style: none;
+  cursor: pointer;
+  flex-direction: column;
+  gap: 0.1rem;
+  list-style: none;
+  border-radius: 1rem;
+  background-color: unset;
+  position: relative;
 }
 
-.status ul {
-    margin-left: auto;
-    margin-right: auto;
-    overflow-y: auto;
-    font-size: 1.6rem;
-    display: flex;
-    justify-content: space-around;
+.controls {
+  position: absolute;
+  top: 100%;
+  width: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  overflow: visible;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  width: unset;
 }
 
-.status ul li:hover,
-option:hover {
-    background-color: #0005;
+.controls div.option:hover {
+  background-color: #0005;
 }
 
-li.option img {
-    width: 7rem;
-    height: 7rem;
-    display: block;
-    border-radius: 10rem;
-    padding: 11px;
-    background: #c43f3f;
-    overflow: visible;
-    box-shadow: 5px 5px 3px #0008;
-    transform: scale(0.8);
+.option img {
+  width: 7rem;
+  height: 7rem;
+  display: block;
+  border-radius: 10rem;
+  padding: 11px;
+  background: #c43f3f;
+  overflow: visible;
+  box-shadow: 5px 5px 3px #0008;
+  transform: scale(0.8);
+}
+
+.all-in {
+  color: #c43f3f;
+  font-weight: bold;
+}
+
+.all-in.option img {
+  background: white;
+}
+
+.status .option.raise_option {
+  position: absolute;
+  top: 50%;
+  left: -0.35rem;
+  transform: translateY(-50%);
+}
+
+.status .option.raise_option img {
+  height: 4rem;
+  width: 4rem;
 }
 
 .call-wager {
-    font-size: 1.3rem;
+  font-size: 1.3rem;
 }
 
 #call img {
-    background-color: #036;
+  background-color: #036;
 }
 
 #fold img {
-    background-color: #333;
+  background-color: #333;
 }
 
 #raise img {
-    background-color: #c43f3f;
+  background-color: #c43f3f;
 }
 
 #check img {
-    background-color: #063;
+  background-color: #063;
 }
 
-li.raise_option span span {
-    display: block;
-    line-height: 1.5rem;
+.raise_option span span {
+  display: block;
+  line-height: 1.5rem;
 }
 
-li.raise_option>span {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+.raise_option > span {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
-li.option.raise_option {
-    height: 5rem;
+.option.raise_option img {
+  height: 6rem;
+  width: 6rem;
 }
-
-li.option.raise_option img {
-    height: 6rem;
-    width: 6rem;
-}
-
 
 .raise_option .wager-ticker {
-    font-size: 1.2rem;
+  font-size: 1.2rem;
 }
 
 .raise_allin_text {
-    display: none;
-    position: absolute;
-    top: 50%;
-    left: 32px;
-    width: 200%;
-    transform: translateY(-50%);
+  display: none;
+  position: absolute;
+  top: 50%;
+  left: 32px;
+  width: 200%;
+  transform: translateY(-50%);
 }
 
-li:hover .raise_allin_text {
-    display: block;
+:hover .raise_allin_text {
+  display: block;
 }
 
 span.raise_option img {
-    height: 1.3rem !important;
-    width: 1.3rem !important;
-    border-radius: 10rem;
-    border: 1px solid #fff;
-    cursor: pointer;
+  height: 1.3rem !important;
+  width: 1.3rem !important;
+  border-radius: 10rem;
+  border: 1px solid #fff;
+  cursor: pointer;
 }
 
 .textchoice {
-    list-style: none;
-    padding: 1rem 2rem;
-    cursor: pointer;
-  }
+  list-style: none;
+  padding: 1rem 2rem;
+  cursor: pointer;
+}
