--- a/mods/poker/web/css/poker-playerbox.css
+++ b/mods/poker/web/css/poker-playerbox.css
@@ -45,14 +45,39 @@
 	position: absolute;
 	display: none;
 	border: 1px solid white;
-	bottom: calc(100% + 1.5rem);
+	bottom: calc(100% + 2rem);
 	border-radius: 1rem;
 	padding: 0.5rem;
 	font-size: 24px;
 	background-color: #020;
 }
 
-.saito-user:hover > .game-playerbox-icons .crypto-hover-balance {
+.saito-user > .game-playerbox-icons:after{
+	content: "";
+	position: absolute;
+	width: 6rem;
+	height: 5rem;
+}
+
+.saito-user > .game-playerbox-icons:hover .crypto-hover-balance {
+	display: block;
+}
+
+
+.crypto-hover-raise {
+	position: absolute;
+	display: none;
+	border: 1px solid white;
+	bottom: 100%;
+	border-radius: 1rem;
+	padding: 0.5rem;
+	font-size: 18px;
+	background-color: #020;
+	pointer-events: none;
+	white-space: nowrap;
+}
+
+.raise_option:hover .crypto-hover-raise {
 	display: block;
 }
 
@@ -121,7 +146,7 @@
     justify-content: right;
     font-size: 2.5rem;
     position: absolute;
-    top: calc(100% + 2rem);
+    top: calc(100% + 1rem);
     left: 50%;
     transform: translateX(-50%);
     border-radius: 10rem;
