--- a/mods/paths/web/css/paths-zoom.css
+++ b/mods/paths/web/css/paths-zoom.css
@@ -57,7 +57,6 @@
 }
 .zoom-overlay .right {
 }
-
 .zoom-overlay .controls ul {
 	overflow-y: auto;
 	display: block;
@@ -81,6 +80,8 @@
 	min-height: max-content;
 	height: auto;
 	cursor: pointer;
+    	overflow-y: scroll;
+    	min-height: 100%;
 }
 
 .zoom-overlay .status .status-header {
