--- a/mods/paths/web/css/paths-board.css
+++ b/mods/paths/web/css/paths-board.css
@@ -798,6 +798,39 @@
   flex-direction: column;
 }
 
+.eliminated-units-box .army-tile {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    max-width: 100px;
+    max-height: 100px;
+}
+
+.aeubox {
+    top: 2950px;
+    left: 1880px;
+    width: 430px;
+    height: 280px;
+    padding: 3rem;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    row-gap: 1rem;
+    column-gap: 1rem;
+}
+.ceubox {
+    top: 110px;
+    left: 1050px;
+    width: 430px;
+    height: 280px;
+    padding: 3rem;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    row-gap: 1rem;
+    column-gap: 1rem;
+}
+
 .crbox {
     top: 851px;
     left: 4250px;
