Poker hud pot overhaul (#2748)
* add poker chip display for chips in pot

* smaller player indicators

* neatened up shadows

* rework of hud and buttons

* good for review

* fixed image sizing in buttons

* small layout and colour fixes

* some initial tweaks

* improve chip&crypto display

* fix: his and paths

* make gaming more accessible outside of arcade/rs

* center game initializer in Arcade

* Add settings to settings for easier debugging

* Observer: don't show join unless open table

* RS: pace loader upgrade

* fix: his patches

* dg npm to match master - 78 not tested

* Videocall: fix use saved device

* updated loading logo

* apply pace to all applications

* apply pace to game loading pages

* clear observer games

* fix: minor patches

* remove obstacle to restoring stun connections without reload

* reduce Arcade logging

* npm ug

* update chip display

* Poker: fix updated of player userline

* poker improvements

---------

Co-authored-by: arpee <richard@saito.tech>
Co-authored-by: David Lancashire <david.lancashire@gmail.com>

--- a/mods/poker/web/css/poker-base.css
+++ b/mods/poker/web/css/poker-base.css
@@ -44,14 +44,14 @@ body {
 .deal {
   display: flex;
   gap: 1rem;
-  margin-bottom: 2rem;
+  margin: 8rem 0 0;
   height: 230px;
 }
 
 .mystuff {
   position: absolute;
   width: 100vw;
-  height: 275px;
+  height: 240px;
   max-height: 36vh;
   /*left: calc(50% - 125px);*/  
   bottom: 10px;
