--- a/mods/poker/web/css/poker-hud.css
+++ b/mods/poker/web/css/poker-hud.css
@@ -1,21 +1,150 @@
-
-.status ul li,
-.option {
-	height: 5.5rem;
-	border-top: 1px solid var(--saito-border-color);
-	width: 100%;
-	font-size: 1.8rem;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	list-style: none;
-	cursor: pointer;
+.controls div.option {
+  /*height: 10rem;*/
+  height: unset;
+  padding: unset;
+  border: unset;
+  max-width: 9rem;
+  font-size: 1.8rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  list-style: none;
+  cursor: pointer;
+  flex-direction: column;
+  gap: 0.4rem;
+  list-style: none;
+  border-radius: 1rem;
+  background-color: unset;
+  position: relative;
+  padding: 0 5px;
 }
 
-.status ul li:hover,
-option:hover {
-	background-color: #0005;
+.controls .option.raise_option {
+  padding: 5px;
 }
 
+.controls {
+  position: absolute;
+  top: 100%;
+  min-width: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  overflow: visible;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  width: unset;
+  gap: 5px;
+}
 
+.controls ul li {
+    background-color: unset;
+    border-top: unset;
+    height: 6rem;
+}
 
+.controls div.option:hover, .controls ul li:hover {
+  background-color: #0005;
+}
+
+.option img {
+  width: 6.7rem;
+  height: 6.7rem;
+  display: block;
+  border-radius: 10rem;
+  padding: 11px;
+  background: #c43f3f;
+  overflow: visible;
+  box-shadow: 5px 5px 3px #0008;
+  /*transform: scale(0.8);*/
+}
+
+.all-in {
+  color: #c43f3f;
+  font-weight: bold;
+}
+
+.all-in.option img {
+  background: white;
+}
+
+.status .option.raise_option {
+  position: absolute;
+  top: 50%;
+  left: -0.35rem;
+  transform: translateY(-50%);
+  cursor: pointer;
+}
+
+.status .option.raise_option img {
+  height: 4rem;
+  width: 4rem;
+}
+
+.call-wager {
+  font-size: 1.3rem;
+}
+
+#call img {
+  background-color: #036;
+}
+
+#fold img {
+  background-color: #333;
+}
+
+#raise img {
+  background-color: #c43f3f;
+}
+
+#check img {
+  background-color: #063;
+}
+
+.raise_option span span {
+  display: block;
+  line-height: 1.5rem;
+}
+
+.raise_option > span {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.option.raise_option img {
+  height: 6rem;
+  width: 6rem;
+}
+
+.raise_option .wager-ticker {
+  font-size: 1.2rem;
+}
+
+.raise_allin_text {
+  display: none;
+  position: absolute;
+  top: 50%;
+  left: 32px;
+  width: 200%;
+  transform: translateY(-50%);
+}
+
+:hover .raise_allin_text {
+  display: block;
+}
+
+span.raise_option img {
+  height: 1.3rem !important;
+  width: 1.3rem !important;
+  border-radius: 10rem;
+  border: 1px solid #fff;
+  cursor: pointer;
+}
+
+.textchoice {
+  list-style: none;
+  padding: 1rem 2rem;
+  cursor: pointer;
+}
