--- a/web/saito/css-imports/saito-loader.css
+++ b/web/saito/css-imports/saito-loader.css
@@ -54,6 +54,10 @@
     }
 }
 
+.saito-loader-container{
+    transition: opacity 0.5s, margin 0.5s;
+}
+
 .saito-loader-container.blocker {
   height: 100vh; 
   width: 100vw; 
@@ -70,6 +74,11 @@
     margin-top: 7rem;
 }
 
+
+.saito-loader-container.disappear {
+    opacity: 0;
+    margin-top: 0;
+}
 
 /* Spinning loader */
 
