--- a/web/saito/css-imports/game-animations.css
+++ b/web/saito/css-imports/game-animations.css
@@ -79,8 +79,9 @@
   width: 100%;
   height: 100%;
   z-index: -1;
-  background-color: orangered;
+  background-color: var(--color-red);
   left: 0;
+  top: 0;
 }
 
 
