--- a/web/saito/css-imports/game-help.css
+++ b/web/saito/css-imports/game-help.css
@@ -1,4 +1,6 @@
 
+/* Triangle in bottom corner of screen */
+
 .game-help-triangle {
     cursor: pointer;
     position: absolute;
@@ -46,7 +48,9 @@
 }
 
 
-.welcome-overlay {
+/* Standard overlay with title, text, and image */
+
+.game-help-overlay {
     width: 80vw;
     height: 80vh;
     overflow: hidden;
@@ -55,7 +59,7 @@
     user-select: none;
 }
 
-.welcome-overlay > div {
+.game-help-overlay > div {
     position: absolute;
     background: #0009;
     left: 3rem;
@@ -65,7 +69,7 @@
     border-radius: 1rem;
 }
 
-.welcome-title {
+.game-help-overlay-title {
     top: 3rem;
     font-size: 4.6rem;
     letter-spacing: 0.1rem;
@@ -74,19 +78,19 @@
     max-width: 60%;
 }
 
-.welcome-text {
+.game-help-overlay-text {
     bottom: 0px;
     line-height: 4rem;
     font-size: 2.7rem;
     bottom: 3rem;
 }
 
-.welcome-text em {
+.game-help-overlay-text em {
     font-weight: bold;
     text-decoration: underline;
 }
 
-.welcome-overlay > div.welcome-optout {
+.game-help-overlay > div.game-help-overlay-optout {
     left: unset;
     right: 1rem;
     bottom: 1rem;
@@ -97,7 +101,7 @@
 }
 
 @media screen and (max-width: 768px) {
-    .welcome-overlay > div {
+    .game-help-overlay > div {
         left: 1.5rem;
         max-width: 65%;
     }
