--- a/web/saito/css-imports/game-help.css
+++ b/web/saito/css-imports/game-help.css
@@ -57,6 +57,17 @@
     background-size: cover;
     background-position: center;
     user-select: none;
+    position: relative;
+}
+
+.game-help-overlay canvas {
+    /*max-width: 100%;
+    max-height: 100%;*/
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform-origin: top left;
+    transform: scale(0.8);
 }
 
 .game-help-overlay > div {
