--- a/mods/poker/web/css/poker-base.css
+++ b/mods/poker/web/css/poker-base.css
@@ -70,10 +70,14 @@ body {
 
 .htmlCard {
 	margin: 5px 3px;
-	display: inline-block;
 	background: #fffd;
-	padding: 4px 2px;
 	border-radius: 6px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.05em;
+  height: 32px;
+  width: 32px;
 }
 
 .dealer-button {
