--- a/mods/paths/web/css/paths-space.css
+++ b/mods/paths/web/css/paths-space.css
@@ -7,14 +7,35 @@
 	background-color: white;
 	background-size: cover;
 	overflow-y: auto;
+	padding: 2.5rem;
+}
+
+.space-overlay .name {
+	font-size: 4rem;
 }
 
 .space-overlay .units {
+	margin-top: 1rem;
+	clear: both;
+	display: flex;
+	flex-direction: row;
 	min-height: max-content;
+	column-gap: 1rem;
+	row-gap: 1rem;
 }
 
-.space-overlay .details {
-	min-height: max-content;
+.space-overlay .units .army-tile {
+	position: relative;
+}
 
+.space-overlay .units img {
+	max-height: 100px;
+	max-width: 100px;
+}
+
+
+.space-overlay .status {
+	margin-top: 1rem;
+	font-size: 1.6rem;
 }
 
