fix: red banner

--- a/web/saito/css-imports/saito-header.css
+++ b/web/saito/css-imports/saito-header.css
@@ -37,6 +37,19 @@
   display: none;
 }
 
+/* install menu */
+.saito-overlay-form {
+    width: 60rem;
+    min-width: 300px;
+    max-width: 90vw;
+    padding: 2rem;
+    background-color: var(--background-color-overlay-menu);
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+    border-radius: 0.5rem;
+}
+
 .saito-header-logo {
   width: 15rem;
   cursor: pointer;
