--- a/mods/arcade/web/css/arcade-base.css
+++ b/mods/arcade/web/css/arcade-base.css
@@ -287,3 +287,38 @@
 .can-scroll-up:hover::after {
 	content: "\f0d8";
 }
+
+.arcade-game-selector-teaser .arcade-game-selector-footer {
+    bottom: -2px;
+    right: -2px;
+    max-width: 100%;
+    max-height: 75%;
+    height: 3rem;
+    min-width: 10rem;
+    width: 20rem;
+}
+
+.arcade-game-selector-teaser .arcade-game-selector-footer::before {
+    content: "install";
+    position: absolute;
+    bottom: 1rem;
+    left: 50%;
+    transform: translateX(-50%) rotate(-45deg);
+    background: #b90000;
+    color: white;
+    padding: 1rem 20rem;
+    font-family: sans-serif;
+    font-size: 1.8rem;
+    white-space: nowrap;
+    z-index: 1;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+    margin-left: 5rem;
+    margin-bottom: 1.4rem;
+    letter-spacing: 0.2rem;
+    font-weight: bold;
+}
+
+
+
+
+
