--- a/web/saito/css-imports/saito-overlay.css
+++ b/web/saito/css-imports/saito-overlay.css
@@ -84,6 +84,23 @@
     transform: rotate(90deg);
 }
 
+
+
+.saito-app-overlay .saito-app-body .saito-app-upload {
+  border: 3px dotted;
+  width: 100%;
+  margin: auto;
+  text-align: center;
+  font-size: 2.2rem;
+  padding: 15rem 0rem;
+}
+
+.saito-app-overlay .saito-app-body .saito-app-upload {
+  border: 3px dotted;
+  width: 100%;
+  margin: auto;
+}
+
 .saito-overlay-form {
     width: 60rem;
     min-width: 300px;
