--- a/web/saito/css-imports/game-overlay.css
+++ b/web/saito/css-imports/game-overlay.css
@@ -99,7 +99,7 @@
   width: min(800px, 90vw);
   max-width: 100%;
   padding: 4rem;
-  
+  max-height: 90vh;
   /* No scrollbars */
   overflow-y: auto;
   -ms-overflow-style: none;  /* IE and Edge */
