--- a/web/saito/css-imports/saito-wallet.css
+++ b/web/saito/css-imports/saito-wallet.css
@@ -724,10 +724,13 @@
     background: var(--background-color-main);
 }
 
+
+
 .utxo-slips {
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
+    min-width: 50rem;
 }
 
 .user-slips {
@@ -754,7 +757,19 @@
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
+
 }
+
+.send-nft-container > .right-section {
+  min-width: 50rem;
+  gap: 5rem;
+}
+
+.send-nft-container > .right-section > .nft-receiver {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+ }
 
 .inputs {
   display: flex;
@@ -845,8 +860,14 @@ textarea {
 }                        
 
 .send-nft-row .send-nft-row-item {
-  width: 20rem;
+  width: 15rem;
   overflow: hidden;
+  align-self: center;
+  text-align: center;
+}
+
+.send-nft-row .send-nft-row-item:nth-child(1) {
+  width: 3rem;
 }
 
 @keyframes spin {
